--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@types/express": "^4.17.11",
     "@types/mongodb": "^3.6.9",
+    "@types/socket.io": "^2.1.13",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.6.4",
+    "socket.io": "^4.0.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
   },
