--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
-    "start": "tsc && node ./build/index.ts",
+    "start": "tsc && node ./build/index.js",
     "dev": "ts-node-dev --respawn --transpile-only ./src"
   },
   "author": "Renys De La Cruz",
